diagnostics/release_prep_20251006T150353Z.log
/workspace/devsynth/.venv
[info] Python 3.12.10 detected
Installing dependencies from lock file

No dependencies to install or update

Installing the current project: devsynth (0.1.0a1)
[info] verify_test_markers: files=1258, cache_hits=1258, cache_misses=0, issues=0, speed_violations=0, property_violations=0
Building devsynth (0.1.0a1)
Building wheel
  - Building wheel
  - Built devsynth-0.1.0a1-py3-none-any.whl
Building devsynth (0.1.0a1)
Building sdist
  - Building sdist
  - Built devsynth-0.1.0a1.tar.gz

============================================================ ERRORS ============================================================
_________________________ ERROR collecting tests/behavior/steps/test_agent_api_health_metrics_steps.py _________________________
.venv/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/root/.pyenv/versions/3.12.10/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/root/.pyenv/versions/3.12.10/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/workspace/devsynth/tests/behavior/steps/test_agent_api_health_metrics_steps.py", line 26
E       settings_stub = MagicMock()
E   IndentationError: unexpected indent
======================================================= warnings summary =======================================================
.venv/lib/python3.12/site-packages/pydantic_core/core_schema.py:4137
.venv/lib/python3.12/site-packages/pydantic_core/core_schema.py:4137
  /workspace/devsynth/.venv/lib/python3.12/site-packages/pydantic_core/core_schema.py:4137: DeprecationWarning: `FieldValidationInfo` is deprecated, use `ValidationInfo` instead.
    warnings.warn(msg, DeprecationWarning, stacklevel=1)

.venv/lib/python3.12/site-packages/astor/op_util.py:92
  /workspace/devsynth/.venv/lib/python3.12/site-packages/astor/op_util.py:92: DeprecationWarning: ast.Num is deprecated and will be removed in Python 3.14; use ast.Constant instead
    precedence_data = dict((getattr(ast, x, None), z) for x, y, z in op_data)

<frozen importlib._bootstrap>:488
  <frozen importlib._bootstrap>:488: DeprecationWarning: builtin type SwigPyPacked has no __module__ attribute

<frozen importlib._bootstrap>:488
  <frozen importlib._bootstrap>:488: DeprecationWarning: builtin type SwigPyObject has no __module__ attribute

<frozen importlib._bootstrap>:488
  <frozen importlib._bootstrap>:488: DeprecationWarning: builtin type swigvarlink has no __module__ attribute

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
================================================= Test Categorization Summary ==================================================
Test Type Distribution:
  Unit Tests: 0
  Integration Tests: 0
  Behavior Tests: 1

Test Speed Distribution:
  Fast Tests (< 1s): 1
  Medium Tests (1-5s): 0
  Slow Tests (> 5s): 0
=================================================== short test summary info ====================================================
ERROR tests/behavior/steps/test_agent_api_health_metrics_steps.py
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 1 failures !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
1 skipped, 6 warnings, 1 error in 3.51s
